fixed reviews image not taking up half width on tablet/desktop

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,8 @@ body {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -123,6 +125,7 @@ h2 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.875em;
+  margin: 0;
 }
 
 h3,
@@ -147,7 +150,7 @@ figure {
 }
 
 address {
-  font-style:normal;
+  font-style: normal;
 }
 
 .content-wrapper {
@@ -630,6 +633,7 @@ input[type=button] {
     width: 85%;
   }
 
+  .reviews article figure,
   .reviews article div {
     width: 49%;
   }
@@ -762,7 +766,7 @@ input[type=button] {
 /* Hero Styles  ------------------------------------------------------------*/
     .hero-area h1 {
       font-size: 3.75em;
-      width: 60%;
+      width: 80%;
     }
 
 /* Aside Styles  ------------------------------------------------------------*/
@@ -829,10 +833,6 @@ input[type=button] {
     .faq h2 {
         width: 100%;
         font-size: 3em;
-    }
-
-    .faq-content {
-        flex-basis: 37.5%; /*450px*/
     }
 
     .faq h4,
